--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,11 +1,9 @@
 @import "tailwindcss";
 
-@layer base {
-  .menuHighlight {
-    @apply text-orange-800
-  }
-}
-
 body {
   font-family: Arial, Helvetica, sans-serif;
+}
+
+.menuHighlight {
+  font-weight: bold;
 }
